crates/slate-framework/tests/snapshots/golden_trace_two_window__scene_twa_interleaved_mouse_a_key_b.snap
---
source: crates/slate-framework/tests/golden_trace_two_window.rs
expression: trace
---
[
    TraceEntry {
        seq: 0,
        window: "winA",
        kind: "BeginDispatch",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "mouse_down:rowA",
        ),
    },
    TraceEntry {
        seq: 1,
        window: "winA",
        kind: "rowA_down",
        handler_on: Some(
            1,
        ),
        ctx_target: Some(
            1,
        ),
        signal: None,
        note: None,
    },
    TraceEntry {
        seq: 2,
        window: "winA",
        kind: "EndDispatch",
        handler_on: None,
        ctx_target: None,
        signal: Some(
            "RequestRedraw",
        ),
        note: None,
    },
    TraceEntry {
        seq: 3,
        window: "winB",
        kind: "BeginDispatch",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "key:Tab on winB",
        ),
    },
    TraceEntry {
        seq: 4,
        window: "winB",
        kind: "element_key_down",
        handler_on: Some(
            2,
        ),
        ctx_target: Some(
            2,
        ),
        signal: None,
        note: Some(
            "Tab",
        ),
    },
    TraceEntry {
        seq: 5,
        window: "winB",
        kind: "EndDispatch",
        handler_on: None,
        ctx_target: None,
        signal: Some(
            "RequestRedraw",
        ),
        note: None,
    },
    TraceEntry {
        seq: 6,
        window: "winA",
        kind: "BeginDispatch",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "mouse_up:rowA",
        ),
    },
    TraceEntry {
        seq: 7,
        window: "winA",
        kind: "EndDispatch",
        handler_on: None,
        ctx_target: None,
        signal: Some(
            "RequestRedraw",
        ),
        note: None,
    },
]
